# gd32f50x-demo-suites-cmake-vscode

./: README.md
Drivers/BSP/GD32F503V_EVAL/: gd32f503v_eval.c  gd32f503v_eval.h  gd32f503v_lcd_eval.c  gd32f503v_lcd_eval.h
Drivers/BSP/GD32F503V_EVAL/LCD_Commom/: lcd_font.h
Drivers/CMSIS/GD/GD32F50x/Include/: gd32f50x.h
Projects/GD32F503V_EVAL/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32F503V_EVAL/01_GPIO_Running_LED/Application/Core/Inc/: gd32f50x_libopt.h
Projects/GD32F503V_EVAL/01_GPIO_Running_LED/Application/Core/Src/: main.c
Projects/GD32F503V_EVAL/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32F503V_EVAL/02_GPIO_Key_Polling_mode/Application/Core/Src/: main.c
Projects/GD32F503V_EVAL/03_EXTI_Key_Interrupt_mode/Application/: CMakeLists.txt  readme.txt
Projects/GD32F503V_EVAL/03_EXTI_Key_Interrupt_mode/Application/Core/Inc/: gd32f50x_it.h
Projects/GD32F503V_EVAL/03_EXTI_Key_Interrupt_mode/Application/Core/Src/: gd32f50x_it.c  main.c
Projects/GD32F503V_EVAL/03_EXTI_Key_Interrupt_mode/cmake/: project.cmake
Projects/GD32F503V_EVAL/04_USART_Printf/Application/: readme.txt
Projects/GD32F503V_EVAL/04_USART_Printf/Application/Core/Inc/: gd32f50x_it.h
Projects/GD32F503V_EVAL/04_USART_Printf/Application/Core/Src/: gd32f50x_it.c  main.c  systick.c
Projects/GD32F503V_EVAL/04_USART_Printf/Drivers/CMSIS/: CMakeLists.txt
Projects/GD32F503V_EVAL/05_USART_Echo_Interrupt_mode/Application/: readme.txt
Projects/GD32F503V_EVAL/06_USART_DMA/: gd32f50x_flash.ld
Projects/GD32F503V_EVAL/06_USART_DMA/Application/: readme.txt
Projects/GD32F503V_EVAL/07_ADC_Temperature_Vrefint/Application/: readme.txt
Projects/GD32F503V_EVAL/08_ADC0_ADC1_Follow_up_mode/: CMakeLists.txt
Projects/GD32F503V_EVAL/08_ADC0_ADC1_Follow_up_mode/Application/: readme.txt
Projects/GD32F503V_EVAL/09_ADC0_ADC1_Routine_Parallel_mode/Application/: readme.txt
Projects/GD32F503V_EVAL/10_DAC_Output_Voltage_Value/Application/: readme.txt
Projects/GD32F503V_EVAL/11_Comparator_Obtain_Brightness/Application/: readme.txt
Projects/GD32F503V_EVAL/12_I2C_EEPROM/Application/: CMakeLists.txt  readme.txt
Projects/GD32F503V_EVAL/13_SPI_Quad_Flash/Application/: CMakeLists.txt  readme.txt
Projects/GD32F503V_EVAL/13_SPI_Quad_Flash/Application/Soft_Drive/: gd25qxx.c  gd25qxx.h
Projects/GD32F503V_EVAL/13_SPI_Quad_Flash/Drivers/GD32F50x_standard_peripheral/: CMakeLists.txt
Projects/GD32F503V_EVAL/14_I2S_Audio_Player/Application/: CMakeLists.txt  readme.txt
Projects/GD32F503V_EVAL/14_I2S_Audio_Player/Application/Soft_Drive/: i2s_codec.c  i2s_codec.h
Projects/GD32F503V_EVAL/15_EXMC_NandFlash/Application/: CMakeLists.txt  readme.txt
Projects/GD32F503V_EVAL/15_EXMC_NandFlash/Application/Soft_Drive/: exmc_nandflash.c  exmc_nandflash.h
Projects/GD32F503V_EVAL/16_EXMC_TouchScreen/Application/: CMakeLists.txt  readme.txt
Projects/GD32F503V_EVAL/16_EXMC_TouchScreen/Application/Soft_Drive/: picture.c  picture.h  touch_panel.c  touch_panel.h
Projects/GD32F503V_EVAL/16_EXMC_TouchScreen/Drivers/BSP/GD32F503V_EVAL/: CMakeLists.txt
Projects/GD32F503V_EVAL/17_CAN_Network/Application/: readme.txt
Projects/GD32F503V_EVAL/18_RCU_Clock_Out/Application/: readme.txt
Projects/GD32F503V_EVAL/19_CTC_Calibration/Application/: readme.txt
Projects/GD32F503V_EVAL/19_CTC_Calibration/Drivers/BSP/GD32F503V_EVAL/: CMakeLists.txt
Projects/GD32F503V_EVAL/19_CTC_Calibration/cmake/: project.cmake
Projects/GD32F503V_EVAL/20_PMU_Sleep_Wakeup/Application/: readme.txt
Projects/GD32F503V_EVAL/21_RTC_Calendar/Application/: CMakeLists.txt  readme.txt
Projects/GD32F503V_EVAL/22_TIMER_Breath_LED/Application/: readme.txt
Projects/GD32F503V_EVAL/23_USB_FS_USB_Device_CDC_ACM/: CMakeLists.txt
Projects/GD32F503V_EVAL/23_USB_FS_USB_Device_CDC_ACM/Application/: CMakeLists.txt  readme.txt
Projects/GD32F503V_EVAL/23_USB_FS_USB_Device_CDC_ACM/Drivers/GD32F50x_usbfs_library/: CMakeLists.txt
Projects/GD32F503V_EVAL/23_USB_FS_USB_Device_CDC_ACM/cmake/: project.cmake
Projects/GD32F503V_EVAL/23_USB_FS_USB_Device_HID_Keyboard/: GD32F50x.svd
Projects/GD32F503V_EVAL/23_USB_FS_USB_Device_HID_Keyboard/Application/: CMakeLists.txt  readme.txt
Projects/GD32F503V_EVAL/23_USB_FS_USB_Device_HID_Keyboard/Drivers/GD32F50x_usbfs_library/: CMakeLists.txt
Projects/GD32F503V_EVAL/23_USB_FS_USB_Device_HID_Keyboard/cmake/: project.cmake
Projects/GD32F503V_EVAL/23_USB_FS_USB_Host_HID/Application/: CMakeLists.txt  readme.txt
Projects/GD32F503V_EVAL/23_USB_FS_USB_Host_HID/Drivers/GD32F50x_usbfs_library/: CMakeLists.txt
Projects/GD32F503V_EVAL/23_USB_FS_USB_Host_HID/cmake/: project.cmake
Projects/GD32F503V_EVAL/23_USB_FS_USB_Host_MSC/: CMakeLists.txt
Projects/GD32F503V_EVAL/23_USB_FS_USB_Host_MSC/Application/: CMakeLists.txt  readme.txt
Projects/GD32F503V_EVAL/23_USB_FS_USB_Host_MSC/Drivers/BSP/GD32F503V_EVAL/: CMakeLists.txt
Projects/GD32F503V_EVAL/23_USB_FS_USB_Host_MSC/Drivers/GD32F50x_usbfs_library/: CMakeLists.txt
(+88 files in other folders)
